examples/failing/MultipleErrors2.purs
-- @shouldFailWith UnknownValue
-- @shouldFailWith UnknownValue
module MultipleErrors2 where

import Prelude

foo = itDoesntExist

bar = neitherDoesThis
